lagaði takka, setti bluebutton og texta í index

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div>
+      <div>
+        <img src="img/products.jpg" alt="klifurvörur">
+      </div>
+      <div>
+        <h2>Allar Vörurnar</h2>
+        <p>Prílihúsið hefur allar þær vörur sem þig vantar fyrir klifrið.</p>
+        <button class="blue__button">Skoða Vörur</button>
+      </div>
+      <div>
+        <h2>Besta Starfsfólkið</h2>
+        <p>Starfsfólkið okkar hugsar vel um þig.</p>
+        <button class="blue__button">Kynnast Starfsfólki</button>
+      </div>
+      <div>
+        <img src="img/team.jpg" alt="illuminati handshake">
+      </div>
+    </div>
 
   </body>
 </html>
