--- a/pages/course.html
+++ b/pages/course.html
@@ -78,7 +78,7 @@
             </select>
         </div>
     </div>
-    <button>Skrá</button>
+    <button class="blue__button">Skrá</button>
 </div>
   </body>
 </html>
