--- a/pages/products.html
+++ b/pages/products.html
@@ -11,7 +11,7 @@
   <body>
 <div>
     <div>
-    <img src="../img/Backpack.jpg" alt="Appelsínugulur Bakpoki">
+    <img class="cart" src="../img/Backpack.jpg" alt="Appelsínugulur Bakpoki">
         <h2>Bakpoki</h2>
         <p>Þú getur geymt allt sem þú þarft fyrir klifrið í þessum bakpoka.</p>
         <p>49.900 kr.-</p>
@@ -20,11 +20,11 @@
         </div>
         <div>
             <input type="text" id="fjöldi" name="fjöldi" value="1">
+            <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
         </div>
-        <button>Setja í körfu</button>
     </div>
     <div>
-    <img src="../img/chalkbag.jpg" alt="Flottur Kalkpoki">
+    <img class="cart" src="../img/chalkbag.jpg" alt="Flottur Kalkpoki">
         <h2>Kalkpoki</h2>
         <p>Kalkaðu hendurnar áður en þú verður kalkaður í hausnum.</p>
         <p>4.900 kr.-</p>
@@ -33,11 +33,11 @@
         </div>
         <div>
             <input type="text" id="fjöldi" name="fjöldi" value="1">
+            <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
         </div>
-        <button>Setja í körfu</button>
     </div>
     <div>
-    <img src="../img/climbingrope.jpg" alt="Blátt Klifurband">
+    <img class="cart" src="../img/climbingrope.jpg" alt="Blátt Klifurband">
         <h2>Klifurlína</h2>
         <p>Farðu upp öll fjöll með þessari 200m klifurlínu.</p>
         <p>39.900 kr.-</p>
@@ -46,11 +46,11 @@
         </div>
         <div>
             <input type="text" id="fjöldi" name="fjöldi" value="1">
+            <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
         </div>
-        <button>Setja í körfu</button>
     </div>
     <div>
-    <img src="../img/shoes.jpg" alt="Þröngir Klifurskór">
+    <img class="cart" src="../img/shoes.jpg" alt="Þröngir Klifurskór">
         <h2>Klifurskór</h2>
         <p>Klifurskór með nanótækni sem gerir þér kleift að klifra upp slétta lóðrétta veggi.</p>
         <p>19.900 kr.-</p>
@@ -59,11 +59,11 @@
         </div>
         <div>
             <input type="text" id="fjöldi" name="fjöldi" value="1">
+            <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
         </div>
-        <button>Setja í körfu</button>
     </div>
     <div>
-    <img src="../img/Dring.jpg" alt="Litríkar Karabínur">
+    <img class="cart" src="../img/Dring.jpg" alt="Litríkar Karabínur">
         <h2>Karabína</h2>
         <p>Þessi karbína hefur styrkleika til þess að halda á 10 tonnum. Það er meira en 20 snorlax pókemonar.</p>
         <p>10.900 kr.-</p>
@@ -72,11 +72,11 @@
         </div>
         <div>
             <input type="text" id="fjöldi" name="fjöldi" value="1">
+            <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
         </div>
-        <button>Setja í körfu</button>
     </div>
     <div>        
-    <img src="../img/Harness.jpg" alt="Lúxus Klifurbelti">
+    <img class="cart" src="../img/Harness.jpg" alt="Lúxus Klifurbelti">
         <h2>Klifurbelti</h2>
         <p>Hágæða klifurbelti með nanótækni og innbyggt bluetooth til þess að tengjast símanum þínum.</p>
         <p>1.999.900 kr.-</p>
@@ -85,8 +85,8 @@
         </div>
         <div>
             <input type="text" id="fjöldi" name="fjöldi" value="1">
+            <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
         </div>
-        <button>Setja í körfu</button>
     </div>
 <div>
 
