Lagfæring á staff.html

--- a/pages/staff.html
+++ b/pages/staff.html
@@ -24,7 +24,7 @@
     <main>
         <div>
             <div>
-                <img class="image__Karitas" src="img\Karítas.jpg" alt="Karítas">
+                <img class="image__Karitas" src="..\img\Karítas.jpg" alt="Karítas">
             </div>
             <div>
                 <h3>Karítas Hrafnsdóttir</h3>
@@ -33,7 +33,7 @@
         </div>
         <div>
             <div>
-                <img class="image__Ulfur" src="img\Úlfur Arnar.jpg" alt="Úlfur Arnar">
+                <img class="image__Ulfur" src="..\img\Úlfur Arnar.jpg" alt="Úlfur Arnar">
             </div>
             <div>
                 <h3>Úlfur Arnar Guðjohnsen</h3>
@@ -42,7 +42,7 @@
         </div>
         <div>
             <div>
-                    <img class="image__Bergros" src="img\Bergrós.jpg" alt="Bergrós">
+                <img class="image__Bergros" src="..\img\Bergrós.jpg" alt="Bergrós">
             </div>
             <div>
                 <h3>Bergrós Pétursdóttir</h3>
@@ -51,7 +51,7 @@
         </div>
         <div>
             <div>
-                <img class="image__Hannes" src="img\Hannes.jpg" alt="Hannes">
+                <img class="image__Hannes" src="..\img\Hannes.jpg" alt="Hannes">
             </div>
             <div>
                 <h3>Hannes Flóki Andrason</h3>
@@ -105,3 +105,4 @@
 
     </footer>
 </body>
+</html>
