Bætti header og footer

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -8,6 +8,17 @@
 
   </head>
   <body>
+    <header>
+        <div>
+            <h1>Prílihúsið</h1>
+            <ul>
+                <li><a href="">Forsíða</a></li>
+                <li><a href="">Vörur</a></li>
+                <li><a href="">Námskeið</a></li>
+                <li><a href="">Starfsfólk</a></li>
+            </ul>
+        </div>
+    </header>
       <h2>Vörur í körfu</h2>
       <div class="vara">
         <img class="vara__image" src="../img/Backpack.jpg" alt="Bakpoki">
@@ -83,8 +94,51 @@
 			<option>2022</option>
 		</select>
 	</div>
-
 	<button>Kaupa</button>
 
+    <footer>
+        <div>
+            <p>Vöruflokkar</p>
+            <ul>
+                <li>Nauðsynjavörur</li>
+                <li>Frábærar vörur</li>
+                <li>Ómissandi vörur</li>
+                <li>Ótrúlegar vörur</li>
+                <li>Magnaðar vörur</li>
+            </ul>
+        </div>
+        <div>
+            <p>Vöruflokkar</p>
+            <ul>
+                <li>Trylltar vörur</li>
+                <li>Geggjaðar vörur</li>
+                <li>Svakalegar vörur</li>
+                <li>Fáránlegar vörur</li>
+                <li>Klikkaðar vörur</li>
+            </ul>
+        </div>
+        <div>
+            <p>Námskeið</p>
+            <ul>
+                <li>V0 - V1 námskeið</li>
+                <li>V2 - V4 námskeið</li>
+                <li>V5 - V7 námskeið</li>
+                <li>Fjallaklifur námskeið</li>
+            </ul>
+        </div>
+        <div>
+            <p>Síður</p>
+            <ul>
+                <li>Allar vörur</li>
+                <li>Starfsfólk</li>
+                <li>Námskeið</li>
+                <li>Karfa</li>
+            </ul>
+        </div>
+        <div>
+            <p>© 2019 Prílihúsið</p>
+        </div>
+    
+        </footer>
   </body>
 </html>
