--- a/index.html
+++ b/index.html
@@ -9,24 +9,82 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div>
+  <header>
       <div>
-        <img src="img/products.jpg" alt="klifurvörur">
+          <h1>Prílihúsið</h1>
+          <ul>
+              <li><a href="index.html">Forsíða</a></li>
+              <li><a href="pages/products.html">Vörur</a></li>
+              <li><a href="pages/course.html">Námskeið</a></li>
+              <li><a href="pages/staff.html">Starfsfólk</a></li>
+          </ul>
       </div>
+    </header>
+
+    <main>
       <div>
-        <h2>Allar Vörurnar</h2>
-        <p>Prílihúsið hefur allar þær vörur sem þig vantar fyrir klifrið.</p>
-        <button class="blue__button">Skoða Vörur</button>
+        <div>
+          <img src="img/products.jpg" alt="klifurvörur">
+        </div>
+        <div>
+          <h2>Allar Vörurnar</h2>
+          <p>Prílihúsið hefur allar þær vörur sem þig vantar fyrir klifrið.</p>
+          <button class="blue__button">Skoða Vörur</button>
+        </div>
+        <div>
+          <h2>Besta Starfsfólkið</h2>
+          <p>Starfsfólkið okkar hugsar vel um þig.</p>
+          <button class="blue__button">Kynnast Starfsfólki</button>
+        </div>
+        <div>
+          <img src="img/team.jpg" alt="illuminati handshake">
+        </div>
       </div>
-      <div>
-        <h2>Besta Starfsfólkið</h2>
-        <p>Starfsfólkið okkar hugsar vel um þig.</p>
-        <button class="blue__button">Kynnast Starfsfólki</button>
-      </div>
-      <div>
-        <img src="img/team.jpg" alt="illuminati handshake">
-      </div>
-    </div>
+    </main>
+
+    <footer>
+        <div>
+            <p>Vöruflokkar</p>
+            <ul>
+                <li>Nauðsynjavörur</li>
+                <li>Frábærar vörur</li>
+                <li>Ómissandi vörur</li>
+                <li>Ótrúlegar vörur</li>
+                <li>Magnaðar vörur</li>
+            </ul>
+        </div>
+        <div>
+            <p>Vöruflokkar</p>
+            <ul>
+                <li>Trylltar vörur</li>
+                <li>Geggjaðar vörur</li>
+                <li>Svakalegar vörur</li>
+                <li>Fáránlegar vörur</li>
+                <li>Klikkaðar vörur</li>
+            </ul>
+        </div>
+        <div>
+            <p>Námskeið</p>
+            <ul>
+                <li>V0 - V1 námskeið</li>
+                <li>V2 - V4 námskeið</li>
+                <li>V5 - V7 námskeið</li>
+                <li>Fjallaklifur námskeið</li>
+            </ul>
+        </div>
+        <div>
+            <p>Síður</p>
+            <ul>
+                <li>Allar vörur</li>
+                <li>Starfsfólk</li>
+                <li>Námskeið</li>
+                <li>Karfa</li>
+            </ul>
+        </div>
+        <div>
+            <p>© 2019 Prílihúsið</p>
+        </div>
+    </footer>
 
   </body>
 </html>
