--- a/pages/staff.html
+++ b/pages/staff.html
@@ -14,10 +14,10 @@
         <div>
             <h1>Prílihúsið</h1>
             <ul>
-                <li><a href="">Forsíða</a></li>
-                <li><a href="">Vörur</a></li>
-                <li><a href="">Námskeið</a></li>
-                <li><a href="">Starfsfólk</a></li>
+                <li><a href="../index.html">Forsíða</a></li>
+                <li><a href="products.html">Vörur</a></li>
+                <li><a href="course.html">Námskeið</a></li>
+                <li><a href="staff.html">Starfsfólk</a></li>
             </ul>
         </div>
     </header>
