Lagaði id-in á fjölda label-unum

--- a/pages/products.html
+++ b/pages/products.html
@@ -29,10 +29,10 @@
              <p>Þú getur geymt allt sem þú þarft fyrir klifrið í þessum bakpoka.</p>
              <p>49.900 kr.-</p>
              <div>
-                 <label for="fjöldi">Fjöldi:</label>
+                 <label for="fjöldi1">Fjöldi:</label>
              </div>
              <div>
-                 <input type="text" id="fjöldi" name="fjöldi" value="1">
+                 <input type="text" id="fjöldi1" name="fjöldi" value="1">
                  <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
              </div>
          </div>
@@ -42,10 +42,10 @@
              <p>Kalkaðu hendurnar áður en þú verður kalkaður í hausnum.</p>
              <p>4.900 kr.-</p>
              <div>
-                 <label for="fjöldi">Fjöldi:</label>
+                 <label for="fjöldi2">Fjöldi:</label>
              </div>
              <div>
-                 <input type="text" id="fjöldi" name="fjöldi" value="1">
+                 <input type="text" id="fjöldi2" name="fjöldi" value="1">
                  <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
              </div>
          </div>
@@ -55,10 +55,10 @@
              <p>Farðu upp öll fjöll með þessari 200m klifurlínu.</p>
              <p>39.900 kr.-</p>
              <div>
-                 <label for="fjöldi">Fjöldi:</label>
+                 <label for="fjöldi3">Fjöldi:</label>
              </div>
              <div>
-                 <input type="text" id="fjöldi" name="fjöldi" value="1">
+                 <input type="text" id="fjöldi3" name="fjöldi" value="1">
                  <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
              </div>
          </div>
@@ -68,10 +68,10 @@
              <p>Klifurskór með nanótækni sem gerir þér kleift að klifra upp slétta lóðrétta veggi.</p>
              <p>19.900 kr.-</p>
              <div>
-                 <label for="fjöldi">Fjöldi:</label>
+                 <label for="fjöldi4">Fjöldi:</label>
              </div>
              <div>
-                 <input type="text" id="fjöldi" name="fjöldi" value="1">
+                 <input type="text" id="fjöldi4" name="fjöldi" value="1">
                  <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
              </div>
          </div>
@@ -81,10 +81,10 @@
              <p>Þessi karbína hefur styrkleika til þess að halda á 10 tonnum. Það er meira en 20 snorlax pókemonar.</p>
              <p>10.900 kr.-</p>
              <div>
-                 <label for="fjöldi">Fjöldi:</label>
+                 <label for="fjöldi5">Fjöldi:</label>
              </div>
              <div>
-                 <input type="text" id="fjöldi" name="fjöldi" value="1">
+                 <input type="text" id="fjöldi5" name="fjöldi" value="1">
                  <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
              </div>
          </div>
@@ -94,10 +94,10 @@
              <p>Hágæða klifurbelti með nanótækni og innbyggt bluetooth til þess að tengjast símanum þínum.</p>
              <p>1.999.900 kr.-</p>
              <div>
-                 <label for="fjöldi">Fjöldi:</label>
+                 <label for="fjöldi6">Fjöldi:</label>
              </div>
              <div>
-                 <input type="text" id="fjöldi" name="fjöldi" value="1">
+                 <input type="text" id="fjöldi6" name="fjöldi" value="1">
                  <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
              </div>
          </div>
