lagaði css vísi í product

--- a/pages/products.html
+++ b/pages/products.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vöruhúsið</title>
 
-    <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../grid.css">
+    <link rel="stylesheet" href="../styles.css">
   </head>
   <body>
  <header>
@@ -104,7 +104,8 @@
      <div>
  </main>
  <footer>
-     <div>
+    <div class="list__row">
+     <div class="list__col">
          <p>Vöruflokkar</p>
          <ul>
              <li>Nauðsynjavörur</li>
@@ -114,7 +115,7 @@
              <li>Magnaðar vörur</li>
          </ul>
      </div>
-     <div>
+     <div class="list__col">
          <p>Vöruflokkar</p>
          <ul>
              <li>Trylltar vörur</li>
@@ -124,7 +125,7 @@
              <li>Klikkaðar vörur</li>
          </ul>
      </div>
-     <div>
+     <div class="list__col">
          <p>Námskeið</p>
          <ul>
              <li>V0 - V1 námskeið</li>
@@ -133,7 +134,7 @@
              <li>Fjallaklifur námskeið</li>
          </ul>
      </div>
-     <div>
+     <div class="list__col">
          <p>Síður</p>
          <ul>
              <li>Allar vörur</li>
@@ -145,6 +146,7 @@
      <div>
          <p>© 2019 Prílihúsið</p>
      </div>
+    </div>
  </footer>
  </body>
 </html>
