lagaði eina villu í skránni

--- a/pages/products.html
+++ b/pages/products.html
@@ -101,8 +101,9 @@
                  <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
              </div>
          </div>
-     <div>
+     </div>
  </main>
+ 
  <footer>
      <div>
          <p>Vöruflokkar</p>
