--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
               <li><a href="pages/course.html">Námskeið</a></li>
               <li><a href="pages/staff.html">Starfsfólk</a></li>
           </ul>
+          <a href="pages/cart.html">Karfa</a>
       </div>
     </header>
 
