búin að gera mest allt scssið fyrir vörur (miðað við cart.html). og bætti vorur.scss skránniinn í styles.scss skránna

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -23,30 +23,40 @@
       <h2>Vörur í körfu</h2>
       <div class="vara">
         <img class="vara__image" src="../img/Backpack.jpg" alt="Bakpoki">
-		<h2>Bakpoki</h2>
-		<p class="vara__lysing">Þú getur geymt allt sem þú þarft fyrir klifrið í þessum bakpoka.</p>
-
-		<p class="vara__verd">49.900 kr.-</p>
-		<div class="vara__moguleikar">
-			<label for="fjoldi">Fjöldi:</label>
-			<input type="text" id="fjoldi" name="fjoldi" value="2">
-			<button>Uppfæra</button>
-			<button>Eyða úr körfu</button>
-		</div>
+        <div class="vara__innihald">
+            <div class="vara__uppi">
+                <h2 class="vara__heiti">Bakpoki</h2>
+		        <p class="vara__lysing">Þú getur geymt allt sem þú þarft fyrir klifrið í þessum bakpoka.</p>
+            </div>
+            <div class="vara__nidri">
+		        <p class="vara__verd">49.900 kr.-</p>
+		        <div class="vara__moguleikar">
+                    <p>Fjöldi:</p>
+                    <input type="text" name="fjoldi" value="2">
+                    <button>Uppfæra</button>
+                    <button>Eyða úr körfu</button>
+                </div>
+            </div>
+        </div>
 	</div>
 
 	<div class="vara">
-            <img class="vara__image" src="../img/chalkbag.jpg" alt="Kalkpoki">
-		<h2>Kalkpoki</h2>
-		<p class="vara__lysing">Kalkaðu hendurnar áður en þú verður kalkaður í hausnum.</p>
-
-		<p class="vara__verd">4.900 kr.-</p>
-		<div class="vara__moguleikar">
-			<p>Fjöldi:</p>
-			<input type="text" value="4">
-			<button>Uppfæra</button>
-			<button>Eyða úr körfu</button>
-		</div>
+        <img class="vara__image" src="../img/chalkbag.jpg" alt="Kalkpoki">
+        <div class="vara__innihald">
+            <div class="vara__uppi">
+                <h2 class="vara__heiti">Kalkpoki</h2>
+		        <p class="vara__lysing">Kalkaðu hendurnar áður en þú verður kalkaður í hausnum.</p>
+            </div>
+            <div class="nidri">
+		        <p class="vara__verd">4.900 kr.-</p>
+		        <div class="vara__moguleikar">
+		        	<p>Fjöldi:</p>
+		        	<input type="text" name="fjoldi" value="4">
+		        	<button>Uppfæra</button>
+		        	<button>Eyða úr körfu</button>
+                </div>
+            </div>
+        </div>
 	</div>
 
 	<div>
