--- a/pages/cart.html
+++ b/pages/cart.html
@@ -31,10 +31,10 @@
             <div class="vara__nidri">
 		        <p class="vara__verd">49.900 kr.-</p>
 		        <div class="vara__moguleikar">
-                    <p>Fjöldi:</p>
-                    <input type="text" name="fjoldi" value="2">
-                    <button>Uppfæra</button>
-                    <button>Eyða úr körfu</button>
+                    <p class="vara__fjoldi">Fjöldi:</p>
+                    <input class="vara__fjoldi--input" type="text" name="fjoldi" value="2">
+                    <button class="vara__takki"><img class="vara__takki--karfa" src="../img/cart.svg" alt="kerra"> Uppfæra</button>
+                    <button class="vara__takki"><img class="vara__takki--karfa" src="../img/cart.svg" alt="kerra"> Eyða úr körfu</button>
                 </div>
             </div>
         </div>
