--- a/pages/cart.html
+++ b/pages/cart.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vöruhúsið</title>
 
-
+    <link rel="stylesheet" href="../grid.css">
+    <link rel="stylesheet" href="../styles.css">
   </head>
   <body>
     <header>
@@ -97,48 +98,49 @@
 	<button>Kaupa</button>
 
     <footer>
-        <div>
-            <p>Vöruflokkar</p>
-            <ul>
-                <li>Nauðsynjavörur</li>
-                <li>Frábærar vörur</li>
-                <li>Ómissandi vörur</li>
-                <li>Ótrúlegar vörur</li>
-                <li>Magnaðar vörur</li>
-            </ul>
+        <div class="list__row">
+         <div class="list__col">
+             <p class="list__title">Vöruflokkar</p>
+             <ul>
+                 <li>Nauðsynjavörur</li>
+                 <li>Frábærar vörur</li>
+                 <li>Ómissandi vörur</li>
+                 <li>Ótrúlegar vörur</li>
+                 <li>Magnaðar vörur</li>
+             </ul>
+         </div>
+         <div class="list__col">
+             <p class="list__title">Vöruflokkar</p>
+             <ul>
+                 <li>Trylltar vörur</li>
+                 <li>Geggjaðar vörur</li>
+                 <li>Svakalegar vörur</li>
+                 <li>Fáránlegar vörur</li>
+                 <li>Klikkaðar vörur</li>
+             </ul>
+         </div>
+         <div class="list__col">
+             <p class="list__title">Námskeið</p>
+             <ul>
+                 <li>V0 - V1 námskeið</li>
+                 <li>V2 - V4 námskeið</li>
+                 <li>V5 - V7 námskeið</li>
+                 <li>Fjallaklifur námskeið</li>
+             </ul>
+         </div>
+         <div class="list__col">
+             <p class="list__title">Síður</p>
+             <ul>
+                 <li>Allar vörur</li>
+                 <li>Starfsfólk</li>
+                 <li>Námskeið</li>
+                 <li>Karfa</li>
+             </ul>
+         </div>
         </div>
         <div>
-            <p>Vöruflokkar</p>
-            <ul>
-                <li>Trylltar vörur</li>
-                <li>Geggjaðar vörur</li>
-                <li>Svakalegar vörur</li>
-                <li>Fáránlegar vörur</li>
-                <li>Klikkaðar vörur</li>
-            </ul>
+            <p class="trademark">© 2019 Prílihúsið</p>
         </div>
-        <div>
-            <p>Námskeið</p>
-            <ul>
-                <li>V0 - V1 námskeið</li>
-                <li>V2 - V4 námskeið</li>
-                <li>V5 - V7 námskeið</li>
-                <li>Fjallaklifur námskeið</li>
-            </ul>
-        </div>
-        <div>
-            <p>Síður</p>
-            <ul>
-                <li>Allar vörur</li>
-                <li>Starfsfólk</li>
-                <li>Námskeið</li>
-                <li>Karfa</li>
-            </ul>
-        </div>
-        <div>
-            <p>© 2019 Prílihúsið</p>
-        </div>
-    
-        </footer>
+     </footer>
   </body>
 </html>
