--- a/pages/products.html
+++ b/pages/products.html
@@ -106,7 +106,7 @@
  <footer>
     <div class="list__row">
      <div class="list__col">
-         <p>Vöruflokkar</p>
+         <p class="list__title">Vöruflokkar</p>
          <ul>
              <li>Nauðsynjavörur</li>
              <li>Frábærar vörur</li>
@@ -116,7 +116,7 @@
          </ul>
      </div>
      <div class="list__col">
-         <p>Vöruflokkar</p>
+         <p class="list__title">Vöruflokkar</p>
          <ul>
              <li>Trylltar vörur</li>
              <li>Geggjaðar vörur</li>
@@ -126,7 +126,7 @@
          </ul>
      </div>
      <div class="list__col">
-         <p>Námskeið</p>
+         <p class="list__title">Námskeið</p>
          <ul>
              <li>V0 - V1 námskeið</li>
              <li>V2 - V4 námskeið</li>
@@ -135,7 +135,7 @@
          </ul>
      </div>
      <div class="list__col">
-         <p>Síður</p>
+         <p class="list__title">Síður</p>
          <ul>
              <li>Allar vörur</li>
              <li>Starfsfólk</li>
@@ -143,9 +143,9 @@
              <li>Karfa</li>
          </ul>
      </div>
-     <div>
-         <p>© 2019 Prílihúsið</p>
-     </div>
+    </div>
+    <div>
+        <p class="trademark">© 2019 Prílihúsið</p>
     </div>
  </footer>
  </body>
