--- a/pages/staff.html
+++ b/pages/staff.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hópverkefni 1</title>
-    <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../grid.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
@@ -61,48 +61,49 @@
     </main>
 
     <footer>
-        <div>
-            <p>Vöruflokkar</p>
-            <ul>
-                <li>Nauðsynjavörur</li>
-                <li>Frábærar vörur</li>
-                <li>Ómissandi vörur</li>
-                <li>Ótrúlegar vörur</li>
-                <li>Magnaðar vörur</li>
-            </ul>
+        <div class="list__row">
+         <div class="list__col">
+             <p class="list__title">Vöruflokkar</p>
+             <ul>
+                 <li>Nauðsynjavörur</li>
+                 <li>Frábærar vörur</li>
+                 <li>Ómissandi vörur</li>
+                 <li>Ótrúlegar vörur</li>
+                 <li>Magnaðar vörur</li>
+             </ul>
+         </div>
+         <div class="list__col">
+             <p class="list__title">Vöruflokkar</p>
+             <ul>
+                 <li>Trylltar vörur</li>
+                 <li>Geggjaðar vörur</li>
+                 <li>Svakalegar vörur</li>
+                 <li>Fáránlegar vörur</li>
+                 <li>Klikkaðar vörur</li>
+             </ul>
+         </div>
+         <div class="list__col">
+             <p class="list__title">Námskeið</p>
+             <ul>
+                 <li>V0 - V1 námskeið</li>
+                 <li>V2 - V4 námskeið</li>
+                 <li>V5 - V7 námskeið</li>
+                 <li>Fjallaklifur námskeið</li>
+             </ul>
+         </div>
+         <div class="list__col">
+             <p class="list__title">Síður</p>
+             <ul>
+                 <li>Allar vörur</li>
+                 <li>Starfsfólk</li>
+                 <li>Námskeið</li>
+                 <li>Karfa</li>
+             </ul>
+         </div>
         </div>
         <div>
-            <p>Vöruflokkar</p>
-            <ul>
-                <li>Trylltar vörur</li>
-                <li>Geggjaðar vörur</li>
-                <li>Svakalegar vörur</li>
-                <li>Fáránlegar vörur</li>
-                <li>Klikkaðar vörur</li>
-            </ul>
+            <p class="trademark">© 2019 Prílihúsið</p>
         </div>
-        <div>
-            <p>Námskeið</p>
-            <ul>
-                <li>V0 - V1 námskeið</li>
-                <li>V2 - V4 námskeið</li>
-                <li>V5 - V7 námskeið</li>
-                <li>Fjallaklifur námskeið</li>
-            </ul>
-        </div>
-        <div>
-            <p>Síður</p>
-            <ul>
-                <li>Allar vörur</li>
-                <li>Starfsfólk</li>
-                <li>Námskeið</li>
-                <li>Karfa</li>
-            </ul>
-        </div>
-        <div>
-            <p>© 2019 Prílihúsið</p>
-        </div>
-
-    </footer>
+     </footer>
 </body>
 </html>
