Lagfæring á staff.html

--- a/pages/staff.html
+++ b/pages/staff.html
@@ -4,20 +4,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hópverkefni 1</title>
-    <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="styles.css">
+    <title>Starfsfólk</title>
+    <link rel="stylesheet" href="..\grid.css">
+    <link rel="stylesheet" href="..\styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <div>
-            <h1>Prílihúsið</h1>
-            <ul>
-                <li><a href="">Forsíða</a></li>
-                <li><a href="">Vörur</a></li>
-                <li><a href="">Námskeið</a></li>
-                <li><a href="">Starfsfólk</a></li>
+            <h1 class="header__title">Prílihúsið</h1>
+            <ul class="header__list">
+                <li><a href="..\index.html">Forsíða</a></li>
+                <li><a href="products.html">Vörur</a></li>
+                <li><a href="course.html">Námskeið</a></li>
+                <li><a href="staff.html">Starfsfólk</a></li>
             </ul>
         </div>
     </header>
@@ -26,7 +27,7 @@
             <div>
                 <img class="image__Karitas" src="..\img\Karítas.jpg" alt="Karítas">
             </div>
-            <div>
+            <div class="about__Karitas">
                 <h3>Karítas Hrafnsdóttir</h3>
                 <p>Karítas Kennir öll námskeið hjá prílihúsinu. Hún hefur unnið 3 heimsmeistaratitla.</p>
             </div>
@@ -35,7 +36,7 @@
             <div>
                 <img class="image__Ulfur" src="..\img\Úlfur Arnar.jpg" alt="Úlfur Arnar">
             </div>
-            <div>
+            <div class="about__Ulfur">
                 <h3>Úlfur Arnar Guðjohnsen</h3>
                 <p>Úlfur hefur klifrað síðan hann var 3 ára. Hann stofnaði síðan prílihúsið þegar hann var 24 ára.</p>
             </div>
@@ -44,7 +45,7 @@
             <div>
                 <img class="image__Bergros" src="..\img\Bergrós.jpg" alt="Bergrós">
             </div>
-            <div>
+            <div class="about__Bergros">
                 <h3>Bergrós Pétursdóttir</h3>
                 <p>Bergrós er forritari hjá Prílihúsinu. Ef eitthvað er að, lagar Bergrós það.</p>
             </div>    
@@ -53,7 +54,7 @@
             <div>
                 <img class="image__Hannes" src="..\img\Hannes.jpg" alt="Hannes">
             </div>
-            <div>
+            <div class="about__Hannes">
                 <h3>Hannes Flóki Andrason</h3>
                 <p>Hannes sér um peningana. Gefðu Hannesi peninga með því að kaupa eitthvað klikkað hjá Prílihúsinu.</p>
             </div>
