--- a/pages/cart.html
+++ b/pages/cart.html
@@ -10,16 +10,17 @@
   </head>
   <body>
     <header>
-        <div>
+        <div class="header__row"> 
             <h1>Prílihúsið</h1>
             <ul>
-                <li><a href="../index.html">Forsíða</a></li>
-                <li><a href="products.html">Vörur</a></li>
-                <li><a href="course.html">Námskeið</a></li>
-                <li><a href="staff.html">Starfsfólk</a></li>
-            </ul>
+               <li><a href="../index.html">Forsíða</a></li>
+               <li><a href="products.html">Vörur</a></li>
+               <li><a href="course.html">Námskeið</a></li>
+               <li><a href="staff.html">Starfsfólk</a></li>
+               <li><a href="cart.html">Karfa</a></li>
+           </ul>
         </div>
-    </header>
+</header>
     <main>
       <h2>Vörur í körfu</h2>
       <div class="vorur">
@@ -297,9 +298,9 @@
 	<button>Kaupa</button>
     </main>
     <footer>
-        <div class="list__row">
-         <div class="list__col">
-             <p class="list__title">Vöruflokkar</p>
+        <div class="footer__row">
+         <div class="footer__col">
+             <p class="footer__title">Vöruflokkar</p>
              <ul>
                  <li>Nauðsynjavörur</li>
                  <li>Frábærar vörur</li>
@@ -308,8 +309,8 @@
                  <li>Magnaðar vörur</li>
              </ul>
          </div>
-         <div class="list__col">
-             <p class="list__title">Vöruflokkar</p>
+         <div class="footer__col">
+             <p class="footer__title">Vöruflokkar</p>
              <ul>
                  <li>Trylltar vörur</li>
                  <li>Geggjaðar vörur</li>
@@ -318,8 +319,8 @@
                  <li>Klikkaðar vörur</li>
              </ul>
          </div>
-         <div class="list__col">
-             <p class="list__title">Námskeið</p>
+         <div class="footer__col">
+             <p class="footer__title">Námskeið</p>
              <ul>
                  <li>V0 - V1 námskeið</li>
                  <li>V2 - V4 námskeið</li>
@@ -327,8 +328,8 @@
                  <li>Fjallaklifur námskeið</li>
              </ul>
          </div>
-         <div class="list__col">
-             <p class="list__title">Síður</p>
+         <div class="footer__col">
+             <p class="footer__title">Síður</p>
              <ul>
                  <li>Allar vörur</li>
                  <li>Starfsfólk</li>
