--- a/pages/course.html
+++ b/pages/course.html
@@ -10,16 +10,17 @@
   </head>
   <body>
     <header>
-      <div>
-          <h1>Prílihúsið</h1>
-          <ul>
-              <li><a href="../index.html">Forsíða</a></li>
-              <li><a href="products.html">Vörur</a></li>
-              <li><a href="course.html">Námskeið</a></li>
-              <li><a href="staff.html">Starfsfólk</a></li>
-          </ul>
-      </div>
-    </header>
+        <div class="header__row"> 
+            <h1>Prílihúsið</h1>
+            <ul>
+               <li><a href="../index.html">Forsíða</a></li>
+               <li><a href="products.html">Vörur</a></li>
+               <li><a href="course.html">Námskeið</a></li>
+               <li><a href="staff.html">Starfsfólk</a></li>
+               <li><a href="cart.html">Karfa</a></li>
+           </ul>
+        </div>
+</header>
 
     <main>
         <div>
@@ -96,9 +97,9 @@
     </main>
 
     <footer>
-        <div class="list__row">
-         <div class="list__col">
-             <p class="list__title">Vöruflokkar</p>
+        <div class="footer__row">
+         <div class="footer__col">
+             <p class="footer__title">Vöruflokkar</p>
              <ul>
                  <li>Nauðsynjavörur</li>
                  <li>Frábærar vörur</li>
@@ -107,8 +108,8 @@
                  <li>Magnaðar vörur</li>
              </ul>
          </div>
-         <div class="list__col">
-             <p class="list__title">Vöruflokkar</p>
+         <div class="footer__col">
+             <p class="footer__title">Vöruflokkar</p>
              <ul>
                  <li>Trylltar vörur</li>
                  <li>Geggjaðar vörur</li>
@@ -117,8 +118,8 @@
                  <li>Klikkaðar vörur</li>
              </ul>
          </div>
-         <div class="list__col">
-             <p class="list__title">Námskeið</p>
+         <div class="footer__col">
+             <p class="footer__title">Námskeið</p>
              <ul>
                  <li>V0 - V1 námskeið</li>
                  <li>V2 - V4 námskeið</li>
@@ -126,8 +127,8 @@
                  <li>Fjallaklifur námskeið</li>
              </ul>
          </div>
-         <div class="list__col">
-             <p class="list__title">Síður</p>
+         <div class="footer__col">
+             <p class="footer__title">Síður</p>
              <ul>
                  <li>Allar vörur</li>
                  <li>Starfsfólk</li>
