--- a/pages/staff.html
+++ b/pages/staff.html
@@ -11,16 +11,17 @@
 
 <body>
     <header>
-        <div>
+        <div class="header__row"> 
             <h1>Prílihúsið</h1>
             <ul>
-                <li><a href="../index.html">Forsíða</a></li>
-                <li><a href="products.html">Vörur</a></li>
-                <li><a href="course.html">Námskeið</a></li>
-                <li><a href="staff.html">Starfsfólk</a></li>
-            </ul>
+               <li><a href="../index.html">Forsíða</a></li>
+               <li><a href="products.html">Vörur</a></li>
+               <li><a href="course.html">Námskeið</a></li>
+               <li><a href="staff.html">Starfsfólk</a></li>
+               <li><a href="cart.html">Karfa</a></li>
+           </ul>
         </div>
-    </header>
+</header>
     <main>
         <div>
             <div>
@@ -61,9 +62,9 @@
     </main>
 
     <footer>
-        <div class="list__row">
-         <div class="list__col">
-             <p class="list__title">Vöruflokkar</p>
+        <div class="footer__row">
+         <div class="footer__col">
+             <p class="footer__title">Vöruflokkar</p>
              <ul>
                  <li>Nauðsynjavörur</li>
                  <li>Frábærar vörur</li>
@@ -72,8 +73,8 @@
                  <li>Magnaðar vörur</li>
              </ul>
          </div>
-         <div class="list__col">
-             <p class="list__title">Vöruflokkar</p>
+         <div class="footer__col">
+             <p class="footer__title">Vöruflokkar</p>
              <ul>
                  <li>Trylltar vörur</li>
                  <li>Geggjaðar vörur</li>
@@ -82,8 +83,8 @@
                  <li>Klikkaðar vörur</li>
              </ul>
          </div>
-         <div class="list__col">
-             <p class="list__title">Námskeið</p>
+         <div class="footer__col">
+             <p class="footer__title">Námskeið</p>
              <ul>
                  <li>V0 - V1 námskeið</li>
                  <li>V2 - V4 námskeið</li>
@@ -91,8 +92,8 @@
                  <li>Fjallaklifur námskeið</li>
              </ul>
          </div>
-         <div class="list__col">
-             <p class="list__title">Síður</p>
+         <div class="footer__col">
+             <p class="footer__title">Síður</p>
              <ul>
                  <li>Allar vörur</li>
                  <li>Starfsfólk</li>
