--- a/pages/cart.html
+++ b/pages/cart.html
@@ -55,10 +55,10 @@
                         <div class="nidri">
             		        <p class="vara__verd">4.900 kr.-</p>
             		        <div class="vara__moguleikar">
-            		        	<p>Fjöldi:</p>
-            		        	<input type="text" name="fjoldi" value="4">
-            		        	<button>Uppfæra</button>
-            		        	<button>Eyða úr körfu</button>
+            		        	<p class="vara__fjoldi">Fjöldi:</p>
+            		        	<input class="vara__fjoldi--input" type="text" name="fjoldi" value="4">
+            		        	<button class="vara__takki"><img class="vara__takki--karfa" src="../img/cart.svg" alt="kerra"> Uppfæra</button>
+                                <button class="vara__takki"><img class="vara__takki--karfa" src="../img/cart.svg" alt="kerra"> Eyða úr körfu</button>
                             </div>
                         </div>
                     </div>
