lagadi linkanna i headernum

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
           <h1>Prílihúsið</h1>
           <ul>
              <li><a href="../index.html">Forsíða</a></li>
-             <li><a href="products.html">Vörur</a></li>
-             <li><a href="course.html">Námskeið</a></li>
-             <li><a href="staff.html">Starfsfólk</a></li>
-             <li><a href="cart.html">Karfa</a></li>
+             <li><a href="pages/products.html">Vörur</a></li>
+             <li><a href="pages/course.html">Námskeið</a></li>
+             <li><a href="pages/staff.html">Starfsfólk</a></li>
+             <li><a href="pages/cart.html">Karfa</a></li>
          </ul>
       </div>
 </header>
