Lagaði til vorur.scss til að henta vorum í cart.html og products.html, breytti líka klösunum í products.html til að passa við breytingar

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -35,11 +35,13 @@
                         </div>
                         <div class="vara__nidri">
 	            	        <p class="vara__verd">49.900 kr.-</p>
-	            	        <div class="vara__moguleikar">
-                                <p class="vara__fjoldi">Fjöldi:</p>
-                                <input class="vara__fjoldi--input" type="text" name="fjoldi" value="2">
-                                <button class="vara__takki"><img class="vara__takki--karfa" src="../img/cart.svg" alt="kerra"> Uppfæra</button>
-                                <button class="vara__takki"><img class="vara__takki--karfa" src="../img/cart.svg" alt="kerra"> Eyða úr körfu</button>
+	            	        <div class="vara__moguleikar__karfa">
+                                <p class="vara__moguleikar__karfa__fjoldi">Fjöldi:</p>
+                                <div>
+                                    <input class="vara__moguleikar__karfa__fjoldi--input" type="text" name="fjoldi" value="2">
+                                    <button class="vara__moguleikar__karfa__takki"><img class="vara__moguleikar__karfa__takki--karfa" src="../img/cart.svg" alt="kerra"> Uppfæra</button>
+                                    <button class="vara__moguleikar__karfa__takki"><img class="vara__moguleikar__karfa__takki--karfa" src="../img/cart.svg" alt="kerra"> Eyða úr körfu</button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -55,11 +57,13 @@
                         </div>
                         <div class="nidri">
             		        <p class="vara__verd">4.900 kr.-</p>
-            		        <div class="vara__moguleikar">
-            		        	<p class="vara__fjoldi">Fjöldi:</p>
-            		        	<input class="vara__fjoldi--input" type="text" name="fjoldi" value="4">
-            		        	<button class="vara__takki"><img class="vara__takki--karfa" src="../img/cart.svg" alt="kerra"> Uppfæra</button>
-                                <button class="vara__takki"><img class="vara__takki--karfa" src="../img/cart.svg" alt="kerra"> Eyða úr körfu</button>
+            		        <div class="vara__moguleikar__karfa">
+            		        	<p class="vara__moguleikar__karfa__fjoldi">Fjöldi:</p>
+                                <div>
+                                    <input class="vara__moguleikar__karfa__fjoldi--input" type="text" name="fjoldi" value="4">
+            		        	    <button class="vara__moguleikar__karfa__takki"><img class="vara__moguleikar__karfa__takki--karfa" src="../img/cart.svg" alt="kerra"> Uppfæra</button>
+                                    <button class="vara__moguleikar__karfa__takki"><img class="vara__moguleikar__karfa__takki--karfa" src="../img/cart.svg" alt="kerra"> Eyða úr körfu</button>
+                                </div>
                             </div>
                         </div>
                     </div>
