--- a/pages/products.html
+++ b/pages/products.html
@@ -23,85 +23,136 @@
  </header>
 
  <main>
-     <div>
-         <div>
-         <img class="cart" src="../img/Backpack.jpg" alt="Appelsínugulur Bakpoki">
-             <h2>Bakpoki</h2>
-             <p>Þú getur geymt allt sem þú þarft fyrir klifrið í þessum bakpoka.</p>
-             <p>49.900 kr.-</p>
-             <div>
-                 <label for="fjöldi1">Fjöldi:</label>
-             </div>
-             <div>
-                 <input type="text" id="fjöldi1" name="fjöldi" value="1">
-                 <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
-             </div>
-         </div>
-         <div>
-         <img class="cart" src="../img/chalkbag.jpg" alt="Flottur Kalkpoki">
-             <h2>Kalkpoki</h2>
-             <p>Kalkaðu hendurnar áður en þú verður kalkaður í hausnum.</p>
-             <p>4.900 kr.-</p>
-             <div>
-                 <label for="fjöldi2">Fjöldi:</label>
-             </div>
-             <div>
-                 <input type="text" id="fjöldi2" name="fjöldi" value="1">
-                 <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
-             </div>
-         </div>
-         <div>
-         <img class="cart" src="../img/climbingrope.jpg" alt="Blátt Klifurband">
-             <h2>Klifurlína</h2>
-             <p>Farðu upp öll fjöll með þessari 200m klifurlínu.</p>
-             <p>39.900 kr.-</p>
-             <div>
-                 <label for="fjöldi3">Fjöldi:</label>
-             </div>
-             <div>
-                 <input type="text" id="fjöldi3" name="fjöldi" value="1">
-                 <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
-             </div>
-         </div>
-         <div>
-         <img class="cart" src="../img/shoes.jpg" alt="Þröngir Klifurskór">
-             <h2>Klifurskór</h2>
-             <p>Klifurskór með nanótækni sem gerir þér kleift að klifra upp slétta lóðrétta veggi.</p>
-             <p>19.900 kr.-</p>
-             <div>
-                 <label for="fjöldi4">Fjöldi:</label>
-             </div>
-             <div>
-                 <input type="text" id="fjöldi4" name="fjöldi" value="1">
-                 <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
-             </div>
-         </div>
-         <div>
-         <img class="cart" src="../img/Dring.jpg" alt="Litríkar Karabínur">
-             <h2>Karabína</h2>
-             <p>Þessi karbína hefur styrkleika til þess að halda á 10 tonnum. Það er meira en 20 snorlax pókemonar.</p>
-             <p>10.900 kr.-</p>
-             <div>
-                 <label for="fjöldi5">Fjöldi:</label>
-             </div>
-             <div>
-                 <input type="text" id="fjöldi5" name="fjöldi" value="1">
-                 <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
-             </div>
-         </div>
-         <div>        
-         <img class="cart" src="../img/Harness.jpg" alt="Lúxus Klifurbelti">
-             <h2>Klifurbelti</h2>
-             <p>Hágæða klifurbelti með nanótækni og innbyggt bluetooth til þess að tengjast símanum þínum.</p>
-             <p>1.999.900 kr.-</p>
-             <div>
-                 <label for="fjöldi6">Fjöldi:</label>
-             </div>
-             <div>
-                 <input type="text" id="fjöldi6" name="fjöldi" value="1">
-                 <button><img src="../img/cart.svg" alt="kerra">Setja í körfu</button>
-             </div>
-         </div>
+     <div class="vorur">
+         <div class="vorur__row">
+             <div class="vorur__col">
+                 <div class="vara">
+                    <img class="vara__image" src="../img/Backpack.jpg" alt="Appelsínugulur Bakpoki">
+                    <div class="vara__innihald">
+                        <div class="vara__uppi">
+                            <h2 class="vara__heiti">Bakpoki</h2>
+                            <p class="vara__lysing">Þú getur geymt allt sem þú þarft fyrir klifrið í þessum bakpoka.</p>
+                        </div>
+                        <div class="vara__nidri">
+                            <p class="vara__verd">49.900 kr.-</p>
+                            <div class="vara__moguleikar__vorur">
+                                <p class="vara__moguleikar__vorur__fjoldi">Fjöldi:</p>
+                                <div>
+                                    <input class="vara__moguleikar__vorur__fjoldi--input" type="text" name="fjöldi" value="1">
+                                    <button class="vara__moguleikar__vorur__takki"><img class="vara__moguleikar__vorur__takki--karfa" src="../img/cart.svg" alt="kerra">Setja í körfu</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        
+            <div class="vorur__col">
+                <div class="vara">
+                    <img class="vara__image" src="../img/chalkbag.jpg" alt="Flottur Kalkpoki">
+                    <div class="vara__innihald">
+                        <div class="vara__uppi">
+                            <h2 class="vara__heiti">Kalkpoki</h2>
+                            <p class="vara__lysing">Kalkaðu hendurnar áður en þú verður kalkaður í hausnum.</p>
+                        </div>
+                        <div class="vara__nidri">
+                            <p class="vara__verd">4.900 kr.-</p>
+                            <div class="vara__moguleikar__vorur">
+                                <p class="vara__moguleikar__vorur__fjoldi">Fjöldi:</p>
+                                <div>
+                                    <input class="vara__moguleikar__vorur__fjoldi--input" type="text" name="fjöldi" value="1">
+                                    <button class="vara__moguleikar__vorur__takki"><img class="vara__moguleikar__vorur__takki--karfa" src="../img/cart.svg" alt="kerra">Setja í körfu</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="vorur__col">
+                <div class="vara">
+                    <img class="vara__image" src="../img/climbingrope.jpg" alt="Blátt Klifurband">
+                    <div class="vara__innihald">
+                        <div class="vara__uppi">
+                            <h2 class="vara__heiti">Klifurlína</h2>
+                            <p class="vara__lysing">Farðu upp öll fjöll með þessari 200m klifurlínu.</p>
+                        </div>
+                        <div class="vara__nidri">
+                            <p class="vara__verd">39.900 kr.-</p>
+                            <div class="vara__moguleikar__vorur">
+                                <p class="vara__moguleikar__vorur__fjoldi">Fjöldi:</p>
+                                <div>
+                                    <input class="vara__moguleikar__vorur__fjoldi--input" type="text" name="fjöldi" value="1">
+                                    <button class="vara__moguleikar__vorur__takki"><img class="vara__moguleikar__vorur__takki--karfa" src="../img/cart.svg" alt="kerra">Setja í körfu</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="vorur__col">
+                <div class="vara">
+                    <img class="vara__image" src="../img/shoes.jpg" alt="Þröngir Klifurskór">
+                    <div class="vara__innihald">
+                        <div class="vara__uppi">
+                            <h2 class="vara__heiti">Klifurskór</h2>
+                            <p class="vara__lysing">Klifurskór með nanótækni sem gerir þér kleift að klifra upp slétta lóðrétta veggi.</p>
+                        </div>
+                        <div class="vara__nidri">
+                            <p class="vara__verd">19.900 kr.-</p>
+                            <div class="vara__moguleikar__vorur">
+                                <p class="vara__moguleikar__vorur__fjoldi">Fjöldi:</p>
+                                <div>
+                                    <input class="vara__moguleikar__vorur__fjoldi--input" type="text" name="fjöldi" value="1">
+                                    <button class="vara__moguleikar__vorur__takki"><img class="vara__moguleikar__vorur__takki--karfa" src="../img/cart.svg" alt="kerra">Setja í körfu</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="vorur__col">
+                <div class="vara">
+                    <img class="vara__image" src="../img/Dring.jpg" alt="Litríkar Karabínur">
+                    <div class="vara__innihald">
+                        <div class="vara__uppi">
+                            <h2 class="vara__heiti">Karabína</h2>
+                            <p class="vara__lysing">Þessi karbína hefur styrkleika til þess að halda á 10 tonnum. Það er meira en 20 snorlax pókemonar.</p>
+                        </div>
+                        <div class="vara__nidri">
+                            <p class="vara__verd">10.900 kr.-</p>
+                            <div class="vara__moguleikar__vorur">
+                                <p class="vara__moguleikar__vorur__fjoldi">Fjöldi:</p>
+                                <div>
+                                    <input class="vara__moguleikar__vorur__fjoldi--input" type="text" name="fjöldi" value="1">
+                                    <button class="vara__moguleikar__vorur__takki"><img class="vara__moguleikar__vorur__takki--karfa" src="../img/cart.svg" alt="kerra">Setja í körfu</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="vorur__col">
+                <div class="vara">        
+                    <img class="vara__image" src="../img/Harness.jpg" alt="Lúxus Klifurbelti">
+                    <div class="vara__innihald">
+                        <div class="vara__uppi">
+                            <h2 class="vara__heiti">Klifurbelti</h2>
+                            <p class="vara__lysing">Hágæða klifurbelti með nanótækni og innbyggt bluetooth til þess að tengjast símanum þínum.</p>
+                        </div>
+                        <div class="vara__nidri">
+                            <p class="vara__verd">1.999.900 kr.-</p>
+                            <div class="vara__moguleikar__vorur">
+                                <p class="vara__moguleikar__vorur__fjoldi">Fjöldi:</p>
+                                <div>
+                                    <input class="vara__moguleikar__vorur__fjoldi--input" type="text" name="fjöldi" value="1">
+                                    <button class="vara__moguleikar__vorur__takki"><img class="vara__moguleikar__vorur__takki--karfa" src="../img/cart.svg" alt="kerra">Setja í körfu</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
      </div>
  </main>
  
