header kominn í 500px fyrir allar síður

--- a/pages/staff.html
+++ b/pages/staff.html
@@ -10,18 +10,32 @@
 </head>
 
 <body>
-    <header>
-        <div class="header__row"> 
-            <h1>Prílihúsið</h1>
-            <ul>
-               <li><a href="../index.html">Forsíða</a></li>
-               <li><a href="products.html">Vörur</a></li>
-               <li><a href="course.html">Námskeið</a></li>
-               <li><a href="staff.html">Starfsfólk</a></li>
-               <li><a href="cart.html">Karfa</a></li>
-           </ul>
-        </div>
-</header>
+        <header>
+                <div class="header__row"> 
+                    <div class="header__row__grid">
+                        <h1>Prílihúsið</h1>
+                    </div>
+                    <div class="header__row__grid">
+                        <ul class="header__row__grid-nested">
+                            <div>
+                                <li class="header__row-item"><a href="../index.html">Forsíða</a></li>
+                            </div>
+                            <div>
+                                <li class="header__row-item"><a href="products.html">Vörur</a></li>
+                            </div>
+                            <div>
+                                <li class="header__row-item"><a href="course.html">Námskeið</a></li>
+                            </div>
+                            <div>
+                                <li class="header__row-item"><a href="staff.html">Starfsfólk</a></li>
+                            </div>
+                            <div class="header__row-cart">
+                                <li class="header__row-item"><img src="../img/cart.svg" alt="kerra"><a href="cart.html"> Karfa (6)</a></li>
+                            </div>
+                        </ul>
+                    </div>
+                </div>
+        </header>
     <main>
         <div>
             <div>
