--- a/index.html
+++ b/index.html
@@ -10,16 +10,30 @@
   </head>
   <body>
     <header>
-      <div class="header__row"> 
-          <h1>Prílihúsið</h1>
-          <ul>
-             <li><a href="../index.html">Forsíða</a></li>
-             <li><a href="pages/products.html">Vörur</a></li>
-             <li><a href="pages/course.html">Námskeið</a></li>
-             <li><a href="pages/staff.html">Starfsfólk</a></li>
-             <li><a href="pages/cart.html">Karfa</a></li>
-         </ul>
-      </div>
+    <div class="header__row"> 
+        <div class="header__row__grid">
+            <h1>Prílihúsið</h1>
+        </div>
+        <div class="header__row__grid">
+            <ul class="header__row__grid-nested">
+                <div>
+                    <li class="header__row-item"><a href="../index.html">Forsíða</a></li>
+                </div>
+                <div>
+                    <li class="header__row-item"><a href="pages/products.html">Vörur</a></li>
+                </div>
+                <div>
+                    <li class="header__row-item"><a href="pages/course.html">Námskeið</a></li>
+                </div>
+                <div>
+                    <li class="header__row-item"><a href="pages/staff.html">Starfsfólk</a></li>
+                </div>
+                <div class="header__row-cart">
+                    <li class="header__row-item"><img src="../img/cart.svg" alt="kerra"><a href="pages/cart.html"> Karfa (6)</a></li>
+                </div>
+            </ul>
+        </div>
+    </div>
 </header>
 
     <main>
