--- a/pages/course.html
+++ b/pages/course.html
@@ -16,16 +16,16 @@
             </div>
             <div class="header__row__grid">
                 <ul class="header__row__grid-nested">
-                    <div>
+                    <div class="header__row-index">
                         <li class="header__row-item"><a href="../index.html">Forsíða</a></li>
                     </div>
-                    <div>
+                    <div class="header__row-products">
                         <li class="header__row-item"><a href="products.html">Vörur</a></li>
                     </div>
-                    <div>
-                        <li class="header__row-item"><a href="course.html">Námskeið</a></li>
+                    <div class="header__row-course">
+                        <li class="header__row-item"><a href="course.html"><u>Námskeið</u></a></li>
                     </div>
-                    <div>
+                    <div class="header__row-staff">
                         <li class="header__row-item"><a href="staff.html">Starfsfólk</a></li>
                     </div>
                     <div class="header__row-cart">
