--- a/pages/staff.html
+++ b/pages/staff.html
@@ -17,17 +17,17 @@
                     </div>
                     <div class="header__row__grid">
                         <ul class="header__row__grid-nested">
-                            <div>
+                            <div class="header__row-index">
                                 <li class="header__row-item"><a href="../index.html">Forsíða</a></li>
                             </div>
-                            <div>
+                            <div class="header__row-products">
                                 <li class="header__row-item"><a href="products.html">Vörur</a></li>
                             </div>
-                            <div>
+                            <div class="header__row-course">
                                 <li class="header__row-item"><a href="course.html">Námskeið</a></li>
                             </div>
-                            <div>
-                                <li class="header__row-item"><a href="staff.html">Starfsfólk</a></li>
+                            <div class="header__row-staff">
+                                <li class="header__row-item"><a href="staff.html"><u>Starfsfólk</u></a></li>
                             </div>
                             <div class="header__row-cart">
                                 <li class="header__row-item"><img src="../img/cart.svg" alt="kerra"><a href="cart.html"> Karfa (6)</a></li>
