bætti við í config og grid, breytti svo staff og index í samræmi

--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
   </header>
 
     <main>
-      <div class="index__grid">
-        <div class="index__row">
-          <div class="index__col">
+      <div class="index grid">
+        <div class="row">
+          <div class="col col1 col--Big3">
             <div class="index__card">
               <img class="index__img" src="img/products.jpg" alt="klifurvörur">
             </div>
           </div>
-          <div class="index__col">
+          <div class="col col1 col--Big3">
             <div class="index__card">
               <div class="index__info">
                 <h2 class="index__title">Allar Vörurnar</h2>
@@ -53,16 +53,18 @@
               </div>
             </div>
           </div>
-          <div class="index__col">
-            <div class="index__card">
-              <div class="index__info">
-                <h2 class="index__title">Besta Starfsfólkið</h2>
-                <p class="index__description">Starfsfólkið okkar hugsar vel um þig.</p>
-                <button class="blue__button">Kynnast Starfsfólki</button>
+          <div class="row row__2">
+            <div class="col col1 col--Big3">
+              <div class="index__card">
+                <div class="index__info">
+                  <h2 class="index__title">Besta Starfsfólkið</h2>
+                  <p class="index__description">Starfsfólkið okkar hugsar vel um þig.</p>
+                  <button class="blue__button">Kynnast Starfsfólki</button>
+                </div>
               </div>
             </div>
           </div>
-          <div class="index__col">
+          <div class="col col1 col--Big3">
             <div class="index__card">
               <img class="index__img" src="img/team.jpg" alt="illuminati handshake">
             </div>
