--- a/pages/staff.html
+++ b/pages/staff.html
@@ -39,9 +39,9 @@
                 </div>
         </header>
     <main>
-        <div class="staff__grid">
-            <div class="staff__row">
-                <div class="staff__col">
+        <div class="staff grid">
+            <div class="row">
+                <div class="col">
                     <div class="staff__card">
                         <div class="staff__about">
                             <img class="staff__img" src="../img/Karítas.jpg" alt="Karítas">
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div>
-                <div class="staff__col">
+                <div class="col">
                     <div class="staff__card">
                         <div class="staff__about">
                             <img class="staff__img" src="../img/Úlfur Arnar.jpg" alt="Úlfur Arnar">
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div>
-                <div class="staff__col">
+                <div class="col">
                     <div class="staff__card">
                         <div class="staff__about">
                             <img class="staff__img" src="../img/Bergrós.jpg" alt="Bergrós">
@@ -80,7 +80,7 @@
                 </div>    
             </div>
             <div>
-                <div class="staff__col">
+                <div class="col">
                     <div class="staff__card">
                         <div class="staff__about">
                             <img class="staff__img" src="../img/Hannes.jpg" alt="Hannes">
