forsíðan orðin betri

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <img class="index__img" src="img/products.jpg" alt="klifurvörur">
             </div>
           </div>
-          <div class="col col1 col--Big3">
+          <div class="col col1 col--Big3 col2row1">
             <div class="index__card">
               <div class="index__info">
                 <h2 class="index__title">Allar Vörurnar</h2>
